# mapper

./: Cargo.toml  README.md  main.rs
examples/: complex_example.rs  multiple_source_use_fields.rs  single_source_auto.rs  single_source_use_fields.rs  single_source_use_fns.rs
src/: lib.rs  parse_helpers.rs
tests/: 01-no-output.rs  generate_empty_implementation.rs  multiple_source_use_fields.rs  multiple_source_with_only_one_use_field.rs  nested.rs  progress.rs  single_source_multiple_field.rs  single_source_single_field.rs  single_source_use_fields.rs  source_has_more_fields.rs  source_with_qualified_name.rs  two_sources.rs  use-fn.rs  with_lifetimes.rs
