[package]
name = "mapper"
version = "0.1.1"
authors = ["kumarmo2 <mohitkumar1015795@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[bin]]
path = "main.rs"
name = "mapper-test"

[dependencies]
syn = {version = "1.0.30", features = ["extra-traits"]}
proc-macro2 = "1.0.18"
quote = "1.0.6"

[dev-dependencies]
trybuild = "1.0"
